force-app/main/default/objects/Pick__c/Pick__c.object-meta.xml
<CustomObject>
    <label>Pick</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Pick Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Picks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>