force-app/main/default/objects/Pick__c/fields/Assigned_Points__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Points__c</fullName>
    <label>Assigned Points</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>