force-app/main/default/objects/Pick__c/fields/Bowl_Game__c.field-meta.xml
<CustomField>
    <fullName>Bowl_Game__c</fullName>
    <label>Bowl Game</label>
    <referenceTo>Bowl_Game__c</referenceTo>
    <relationshipLabel>Picks</relationshipLabel>
    <relationshipName>Picks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>