force-app/main/default/objects/Pick__c/fields/Bowl_Game_Name__c.field-meta.xml
<CustomField>
    <fullName>Bowl_Game_Name__c</fullName>
    <description>This field is required to store the name of the parent Bowl Game so that it can be referenced in the table component of the pickManager LWC.</description>
    <label>Bowl Game Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>