force-app/main/default/objects/Pick__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Identify the participant who placed the pick.</description>
    <inlineHelpText>Identify the participant who placed the pick.</inlineHelpText>
    <label>Participant</label>
    <referenceTo>Year_Participated__c</referenceTo>
    <relationshipLabel>Picks</relationshipLabel>
    <relationshipName>Picks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>