force-app/main/default/objects/Pick__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <formula>Participant__r.Participant__r.Name</formula>
    <label>Participant Name</label>
    <type>Text</type>
</CustomField>