force-app/main/default/objects/Pick__c/fields/Picked_By__c.field-meta.xml
<CustomField>
    <fullName>Picked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Picked By</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Picks</relationshipLabel>
    <relationshipName>Picks</relationshipName>
    <type>Lookup</type>
</CustomField>