force-app/main/default/objects/Pick__c/fields/Picked_Correctly__c.field-meta.xml
<CustomField>
    <fullName>Picked_Correctly__c</fullName>
    <formula>IF(Winner__c = Bowl_Game__r.Winner__c, true, false)</formula>
    <label>Picked Correctly?</label>
    <type>Checkbox</type>
</CustomField>