force-app/main/default/objects/Pick__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <label>Winner</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>