force-app/main/default/objects/Pick__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Year</label>
    <referenceTo>Year__c</referenceTo>
    <relationshipLabel>Picks</relationshipLabel>
    <relationshipName>Picks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>